Fix header z-index

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -28,7 +28,7 @@ header
   top: 0
   left: 0
   right: 0
-  z-index: 1
+  z-index: 2
   .container
     padding: 0 30px
 
